<resources>
    <string name="app_name">DNote</string>
    <string name="title_activity_credit_form">CreditFormActivity</string>
    <string name="title_activity_debit_form">DebitFormActivity</string>
    <string name="customer_name">Name</string>
    <string name="customer_mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="city">city</string>
    <string name="title_activity_dash_navigation">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="add">ADD</string>
    <string name="product_name">Product Name</string>
    <string name="total">Total</string>
    <string name="desc">Description or Remark</string>
    <string name="save">Save</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay">Pay</string>
    <string name="refresh">Refresh</string>
    <string name="share">share</string>
    <string name="title_activity_summary_report">SummaryReportActivity</string>
    <string name="pdf">Pdf</string>
    <string name="refresh">Refresh</string>
</resources>
