<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_debit_form"
            tools:context=".view.DebitFormActivity">


        <TextView
                android:background="@android:color/black"
                android:layout_width="0dp"
                android:layout_height="1dp" android:id="@+id/tvSepereator"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtInAdress" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="64dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/autoCustomerName"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtInAdress" app:layout_constraintEnd_toStartOf="@+id/txtInCity"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" android:id="@+id/edtAdress"/>
        </android.support.design.widget.TextInputLayout>
        <AutoCompleteTextView
                android:inputType="number"
                android:maxLength="10"
                android:completionThreshold="2"
                app:layout_constraintHorizontal_weight="1"
                android:hint="@string/customer_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/autoCustomerMobile"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="2dp" app:layout_constraintStart_toEndOf="@+id/autoCustomerName"
                android:layout_marginEnd="8dp"/>
        <AutoCompleteTextView
                android:completionThreshold="2"
                android:inputType="text"
                app:layout_constraintHorizontal_weight="1"
                android:hint="@string/customer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/autoCustomerName"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/autoCustomerMobile" android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:gravity="bottom"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/txtInCity"
                app:layout_constraintStart_toEndOf="@+id/txtInAdress"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/txtInAdress">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:hint="@string/city" android:id="@+id/edtCity"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/tvSepereator"
                android:id="@+id/llRateContainer"
                app:layout_constraintStart_toStartOf="parent"
                
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content">


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>


