<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_report"
            tools:context=".view.ReportActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/report_progressBar"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
                android:background="@android:color/black"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/report_tvSepereator"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/report_txtInAdress"
                android:layout_marginTop="8dp"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/report_autoCustomerName"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/report_txtInAdress"
                app:layout_constraintEnd_toStartOf="@+id/report_txtInCity"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:id="@+id/report_edtAdress"
                    android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <AutoCompleteTextView
                android:inputType="number"
                android:maxLength="10"
                android:completionThreshold="2"
                app:layout_constraintHorizontal_weight="1"
                android:hint="@string/customer_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/report_autoCustomerMobile"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@+id/report_autoCustomerName"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/report_autoCustomerName"
                android:textSize="14sp"/>

        <AutoCompleteTextView
                android:completionThreshold="2"
                android:inputType="text"
                app:layout_constraintHorizontal_weight="1"
                android:hint="@string/customer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/report_autoCustomerName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/report_autoCustomerMobile"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/report_tvTotalAmountCredit"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:gravity="bottom"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/report_txtInCity"
                app:layout_constraintStart_toEndOf="@+id/report_txtInAdress"
                app:layout_constraintBottom_toBottomOf="@+id/report_txtInAdress">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:id="@+id/report_edtCity"
                    android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:background="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_tvSepereator"
                android:id="@+id/report_llCrDrHistoryLables"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">


            <TextView android:layout_width="0dp"
                      android:layout_gravity="center"
                      android:gravity="center"
                      android:text="@string/credit"
                      android:layout_weight="1"
                      android:padding="2dp"
                      android:textColor="@android:color/white"
                      android:layout_marginEnd="8dp"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"/>

            <TextView android:layout_width="1dp"
                      android:layout_height="match_parent"
                      android:layout_marginEnd="8dp"
                      android:background="@android:color/black"/>


            <TextView android:layout_width="0dp"
                      android:layout_gravity="center"
                      android:text="@string/debit"
                      android:gravity="center"
                      android:padding="2dp"
                      android:textColor="@android:color/white"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_llCrDrHistoryLables"
                android:id="@+id/report_llCrDrHistory"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout android:orientation="vertical"
                          android:layout_weight="1"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content">

                <include layout="@layout/row_credit_history_header"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>

                <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                                        android:id="@+id/report_rvCreditList"
                                                        android:nestedScrollingEnabled="true"
                                                        android:layout_height="250dp"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/report_tvTotalCredit"
                          android:padding="2dp"
                          android:layout_marginTop="10dp"
                          android:gravity="center"
                          android:layout_gravity="center"
                          android:textStyle="bold"
                          tools:text="Total: 400"/>

            </LinearLayout>


            <TextView android:layout_width="1dp"
                      android:layout_height="match_parent"
                      android:background="@android:color/black"/>


            <LinearLayout android:orientation="vertical"
                          android:layout_weight="1"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content">
                <include layout="@layout/row_credit_history_header"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>

                <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                                        android:id="@+id/report_rvDebitList"
                                                        android:nestedScrollingEnabled="true"
                                                        android:layout_height="250dp"/>


                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/report_tvTotalDebit"
                          android:padding="2dp"
                          android:gravity="center"
                          android:layout_marginTop="10dp"
                          android:layout_gravity="center"
                          android:textStyle="bold"
                          tools:text="Total: 400"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/report_tvTotalAmountCredit"
                tools:text="Remaining Amount:- 400"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
